--- a/Pong/pong.html
+++ b/Pong/pong.html
@@ -1,5 +1,5 @@
 <html>
-This is a pong game in progress.</br>
+This is a pong game in progress. v2 - Quick git test</br>
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
 <script>
